force-app/main/default/objects/GPMS_Registered_ABN_Name_History__c/GPMS_Registered_ABN_Name_History__c.object-meta.xml
<CustomObject>
    <label>Registered ABN Name History</label>
    <nameField>
        <displayFormat>RAH-{00000}</displayFormat>
        <label>Registered ABN Name History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registered ABN Name History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>