force-app/main/default/objects/GPMS_Registered_ABN_Name_History__c/fields/ABN_Branch__c.field-meta.xml
<CustomField>
    <fullName>ABN_Branch__c</fullName>
    <label>ABN Branch</label>
    <length>3</length>
    <type>Text</type>
</CustomField>