force-app/main/default/objects/GPMS_Registered_ABN_Name_History__c/fields/ABN_Entity_Name_Effective_To__c.field-meta.xml
<CustomField>
    <fullName>ABN_Entity_Name_Effective_To__c</fullName>
    <label>ABN Entity Name Effective To</label>
    <type>Date</type>
</CustomField>