force-app/main/default/objects/GPMS_Registered_ABN_Name_History__c/fields/ABN_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>ABN_Last_Updated__c</fullName>
    <label>ABN Last Updated</label>
    <type>Date</type>
</CustomField>