force-app/main/default/objects/GPMS_Registered_ABN_Name_History__c/fields/ABN_Name__c.field-meta.xml
<CustomField>
    <fullName>ABN_Name__c</fullName>
    <label>ABN Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>