force-app/main/default/objects/GPMS_Registered_ABN_Name_History__c/fields/ABN_Status__c.field-meta.xml
<CustomField>
    <fullName>ABN_Status__c</fullName>
    <label>ABN Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>