force-app/main/default/objects/GPMS_Registered_ABN_Name_History__c/fields/ABN_Status_Effective_From__c.field-meta.xml
<CustomField>
    <fullName>ABN_Status_Effective_From__c</fullName>
    <label>ABN Status Effective From</label>
    <type>Date</type>
</CustomField>