force-app/main/default/objects/GPMS_Registered_ABN_Name_History__c/fields/ASIC_Number__c.field-meta.xml
<CustomField>
    <fullName>ASIC_Number__c</fullName>
    <label>ASIC Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>