force-app/main/default/objects/GPMS_Registered_ABN_Name_History__c/fields/GRE_Flag__c.field-meta.xml
<CustomField>
    <fullName>GRE_Flag__c</fullName>
    <label>GRE Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>