force-app/main/default/objects/GPMS_Registered_ABN_Name_History__c/fields/Last_ABR_Check__c.field-meta.xml
<CustomField>
    <fullName>Last_ABR_Check__c</fullName>
    <label>Last ABR Refresh Date</label>
    <type>Date</type>
</CustomField>