force-app/main/default/objects/GPMS_Registered_ABN_Name_History__c/fields/Registered_ABN_Name__c.field-meta.xml
<CustomField>
    <fullName>Registered_ABN_Name__c</fullName>
    <label>Registered ABN Name</label>
    <referenceTo>Registered_ABN_Name__c</referenceTo>
    <relationshipLabel>Registered ABN Name History</relationshipLabel>
    <relationshipName>Registered_ABN_Name_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>