force-app/main/default/objects/GPMS_Registered_ABN_Name_History__c/fields/Registered_for_GST__c.field-meta.xml
<CustomField>
    <fullName>Registered_for_GST__c</fullName>
    <label>Registered for GST</label>
    <length>20</length>
    <type>Text</type>
</CustomField>